@@ -46,7 +46,7 @@ Author :<BR>Erik de Castro Lopo
 
 </DIV>
 	<IMG SRC=
-	"/cgi-bin/Count.cgi?ft=6|frgb=55;55;55|tr=0|md=6|dd=B|st=1|sh=1|df=src_lic.dat" 
+	"/cgi-bin/Count.cgi?ft=6|frgb=55;55;55|tr=0|md=6|dd=B|st=1|sh=1|df=src_lic.dat"
 	HEIGHT=30 WIDTH=100 ALT="counter.gif">
 </DIV>
 
@@ -61,21 +61,21 @@ Author :<BR>Erik de Castro Lopo
 <!-- pepper -->
 <P>
 	Secret Rabbit Code is released under a dual licensing scheme.
-	Users can choose which of these two licenses they wish to operate 
+	Users can choose which of these two licenses they wish to operate
 	under :
 </P>
 <!-- pepper -->
 <UL>
 	<LI> The standard
 		<A HREF="http://www.gnu.org/copyleft/gpl.html">
-			GNU General Public License
+			GNU General Public License (version 2 or version 3)
 		</A>
 		(GPL) as written and published by the Free Software Foundation.
 	<LI> The very generous
 		<A HREF="http://www.mega-nerd.com/SRC/libsamplerate-cul.pdf">
 			libsamplerate Commercial Use License
 		</A>
-		that can be purchased for a one off payment of $1000 (one 
+		that can be purchased for a one off payment of $1000 (one
 		thousand) Australian dollars.
 </UL>
 <!-- pepper -->
@@ -87,9 +87,9 @@ Author :<BR>Erik de Castro Lopo
 <!-- pepper -->
 <P>
 	The commercial use license allows licensees to use libsamplerate as a
-	statically linked library in proprietary, shareware or other closed 
+	statically linked library in proprietary, shareware or other closed
 	source applications.
-	The licensee may use libsamplerate in as many separate products as 
+	The licensee may use libsamplerate in as many separate products as
 	they choose and sell as many copies of each as they can without paying
 	any further licensing fees for libsamplerate.
 </P>
@@ -99,13 +99,13 @@ Author :<BR>Erik de Castro Lopo
 		<A HREF="http://www.wordiq.com/definition/GNU_General_Public_License#GPL-related_disputes">
 		debate</A>
 	about whether non-GPL software can dynamically link to GPL libraries.
-	I side with the FSF and assert that an executable dynamically linked 
-	to libsamplerate is a derivative work of libsamplerate and is 
+	I side with the FSF and assert that an executable dynamically linked
+	to libsamplerate is a derivative work of libsamplerate and is
 	therefore subject to the GNU GPL.
 </P>
 <!-- pepper -->
 <P>
-	For more information, please see the 
+	For more information, please see the
 		<A HREF="http://www.mega-nerd.com/SRC/procedure.html">
 			commercial use licensing procedure
 		</A>.
