@@ -3,6 +3,9 @@
     * tests/multi_channel_test.c tests/snr_bw_test.c tests/varispeed_test.c
     Use fftw_cleanup() to remove all memory leaks reported by valgrind.
 
+    * doc/license.html
+    Specify GPLv2 or GPLv3.
+
 2012-08-22  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
 
     * src/src_sinc.c
